Fixed User link Spacing | Fixed sidemenu scroll container

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1647,6 +1647,12 @@ select {
 .resize-none {
   resize: none;
 }
+.scroll-m-0 {
+  scroll-margin: 0px;
+}
+.scroll-p-0 {
+  scroll-padding: 0px;
+}
 .list-inside {
   list-style-position: inside;
 }
@@ -2413,6 +2419,9 @@ select {
 }
 .pl-4 {
   padding-left: 1rem;
+}
+.pr-0 {
+  padding-right: 0px;
 }
 .text-left {
   text-align: left;
